# document-retriever

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
experiments/: chonkie.ipynb  llamaindex.ipynb
src/: bootstrap_registry.py
src/app/: populate.py
src/backend/: main.py
src/backend/routes/: __init__.py  documents.py
src/backend/utils/: populate.py
src/core/: text_extraction.py
src/core/embeddings/: algorithms.py  base.py  config_schema.py  models.py  registry.py  wrapper.py
src/core/storage/: base.py  database.py  registry.py
src/core/text/: text_extraction.py
src/core/text/chunk/: base.py  chunking.py  config_schema.py  models.py  registry.py  wrapper.py
src/frontend/: main.py
src/utils/: config.py
