[project]
name = "document-retriever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "ipykernel>=6.30.0",
    "llama-index>=0.12.52",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-vector-stores-faiss>=0.4.0",
    "pymupdf>=1.26.3",
    "safetensors>=0.5.3",
]
