[project]
name = "document-retriever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chonkie[semantic]>=1.1.2",
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "fastembed>=0.7.1",
    "ipykernel>=6.30.0",
    "llama-index>=0.12.52",
    "llama-index-vector-stores-faiss>=0.4.0",
    "pymupdf>=1.26.3",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.15.1",
    "safetensors>=0.5.3",
    "streamlit>=1.49.1",
    "transformers>=4.54.0",
    "uvicorn>=0.35.0",
]
